Fixing up some alignment and layout.

--- a/app/components/App.css
+++ b/app/components/App.css
@@ -15,4 +15,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
