--- a/app/components/ColorSet.css
+++ b/app/components/ColorSet.css
@@ -27,7 +27,7 @@
     left: 0;
     z-index: 1;
     margin: 0;
-    border-radius: none;
+    border-radius: 0;
   }
 
 }
